# adafruit-ble-file-transfer-client-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
examples/simple-example/: Cargo.toml
examples/simple-example/src/: main.rs
src/: device.rs  errors.rs  lib.rs  response_types.rs
src/providers/: btleplug_provider.rs  mod.rs
