[package]
name = "adafruit-ble-fs-client"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10"
futures = "0.3"
log = "0.4"
tokio = { version = "1.24.1", features = ["full"] }
uuid = "1.2.2"
