[package]
name = "adafruit-ble-fs-client"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A client-side implementation of the Adafruit BLE file transfer protocol"
repository = "https://gitlab.com/jensstein/adafruit-ble-file-transfer-client-rs"
readme = "README.md"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
btleplug = { version = "0.10", optional = true }
futures = "0.3"
log = "0.4"
tokio = { version = "1.24.1", features = ["full"] }
uuid = "1.2.2"

[features]
all-providers = ["btleplug-provider"]
btleplug-provider = ["btleplug"]
