[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-ble-fs-client = {path = "../..", features = ["btleplug-provider"]}
tokio = { version = "1.24.1", features = ["full"] }
